--- a/style.css
+++ b/style.css
@@ -10,10 +10,21 @@ body {
     padding: 50px 0;
 }
 
+.color {
+    background-color: darkseagreen;
+    margin: 2px;
+}
+
 input {
     height: 200px;
     width: 200px;
     border: none;
+    padding: 0;
+}
+
+.original_color {
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .alternatives {
